# cc-engineering

./: .gitignore  CLAUDE.md
.claude/: settings.json  settings.local.json
03-SubAgents/projects/04-parallel-explore/: README.md
06-Hooks/: README.md
06-Hooks/projects/01-security-hooks/: README.md
06-Hooks/projects/02-quality-gates/: README.md  package.json
06-Hooks/projects/03-context-loader/: README.md
07-MCP/: README.md
07-MCP/projects/01-database-mcp/: .mcp.json  README.md
07-MCP/projects/02-dev-tools-mcp/: .mcp.json  README.md
07-MCP/projects/03-custom-mcp/: .mcp.json  README.md
08-Headless/: README.md
08-Headless/projects/01-auto-review-ci/: README.md
08-Headless/projects/02-issue-fixer/: README.md
09-Agent-SDK/: README.md
09-Agent-SDK/projects/01-test-fixer-agent/: README.md  pyproject.toml
09-Agent-SDK/projects/01-test-fixer-agent/examples/sample-failing-tests/: README.md  calculator.js  calculator.test.js
09-Agent-SDK/projects/01-test-fixer-agent/src/: main.py
09-Agent-SDK/projects/01-test-fixer-agent/src/agent/: __init__.py  code_fixer.py  test_analyzer.py
09-Agent-SDK/projects/02-review-bot/: README.md  package.json
10-Plugins/: README.md
11-Debugging/: README.md
12-Cost-Control/: README.md
13-Security/: README.md
14-Large-Codebase/: README.md
15-Prompt-Engineering/: README.md
16-Team-Collaboration/: README.md
docs/: chapters-06-10-content-suggestions-v2.md  chapters-06-10-content-suggestions.md  repo_review.md
docs/plans/: 2026-03-02-hooks-examples.md
scripts/: install-hooks.sh  pre-commit
(+71 files in other folders)
